--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.1.3",
     "ethers": "^5.7.0",
+    "stimulus": "2.0.0",
+    "stimulus-use": "^0.50.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
