--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.1.3",
+    "@rails/actiontext": "^7.0.3-1",
     "ethers": "^5.7.0",
     "js-base64": "^3.7.2",
     "stimulus": "2.0.0",
     "stimulus-use": "^0.50.0",
+    "trix": "^1.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
